Code linting feature using ESLint and prettier
