# src/models/transaction.model.js
@@ -1,19 +1,19 @@
-const mongoose = require("mongoose");
+const mongoose = require('mongoose');
 
 const transactionSchema = new mongoose.Schema(
   {
     userId: {
       type: mongoose.Schema.Types.ObjectId,
-      ref: "User",
+      ref: 'User',
       required: true,
     },
     title: { type: String, required: true },
     amount: { type: Number, required: true },
-    type: { type: String, enum: ["income", "expense"], required: true },
+    type: { type: String, enum: ['income', 'expense'], required: true },
     category: { type: String },
     date: { type: Date, default: Date.now },
   },
   { timestamps: true }
 );
 
-module.exports = mongoose.model("Transaction", transactionSchema);
+module.exports = mongoose.model('Transaction', transactionSchema);
