# src/routes/index.js
@@ -1,12 +1,12 @@
-const express = require("express");
+const express = require('express');
 const router = express.Router();
 
-const authRoutes = require("./auth.routes");
-const transactionRoutes = require("./transaction.routes");
-const reportRoutes = require("./report.routes");
+const authRoutes = require('./auth.routes');
+const transactionRoutes = require('./transaction.routes');
+const reportRoutes = require('./report.routes');
 
-router.use("/auth", authRoutes);
-router.use("/transactions", transactionRoutes);
-router.use("/reports", reportRoutes);
+router.use('/auth', authRoutes);
+router.use('/transactions', transactionRoutes);
+router.use('/reports', reportRoutes);
 
 module.exports = router;
